@@ -25,14 +25,15 @@ Future
   O some.ged.properties files should be read by CC from the same directory as the .ged-file (and saved there, too)
   O Table view for families should list all children, not just first child.
   O Merge and Verify should be reports
-  O Improved windows placement (applet layouts views tree NW, table NE, overview S)
   O EditView should show button for 'Create New Individual' when no individual set
     (works nicely when the user has created an empty tree)
+  O Improved windows placement (applet layouts views tree NW, table NE, overview S)
   O View-Menu in ControlCenter to open up views
   O Use colors to distinguish different events in TimelineView
 
 1.9 - Aug xx 2002
 
+  I EditView Buttons are now always visible (shrinking horizontally) when component is sized too small
   N User can choose Look&Feel (with Skin/Theme support) through AboutDialog (download genj_lnf-x.y.zip to enable)
   N A new PropertySex is now unset when created - the user has to choose male/female eventually
   N Special entities REPOSITORY, SOURCE, SUBMITTER are now supported internally
